# git-diff-sync

./: Cargo.toml  README.md
src/: config.rs  error.rs  local.rs  main.rs  remote.rs  repository.rs
